# falk

./: .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  devices.template.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 925935569e67_initial.py  94a3252df8e0_change_tuya_version_to_string.py  b38a56bf6ad3_add_shelly_id_in_shellyem_table.py  db03cf8c5a30_change_switchmetric_types.py  e16a3e415063_add_electrical_meter_tables.py  e7d672836f09_add_enabled_column_in_smartswitch.py
src/falk/: __init__.py  telemetry.py
src/falk/iot/: shelly.py  tuya.py
src/falk/models/: devices.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: Analytics.tsx  Dashboard.tsx  DeviceCard.tsx  EnergyChart.tsx  Navigation.tsx
web/src/components/ui/: Select.tsx  Tabs.tsx
web/src/helpers/: cn.ts
